# SWAPI

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md  README.ru.md  pyproject.toml  requirements.txt
.github/workflows/: release-windows.yml
01_parsing_API/: README.md
01_parsing_API/scripts/: README.md  build_llm_index.py  load_postgres.py
02_mcp_server/: build_release.py  pyproject.toml  requirements.txt
02_mcp_server/packaging/pyinstaller/: swapi_mcp_server.py  swapi_release_manager_gui.py  swapi_setup.py
02_mcp_server/packaging/pyinstaller/hooks/: hook-swapi_release_manager.py
02_mcp_server/packaging/windows/: README.md  build-release.ps1  export-postgres-dump.ps1  publish-github-release.ps1  restore-db.ps1
02_mcp_server/swapi_mcp/: __init__.py  config.py  server.py
02_mcp_server/swapi_release_manager/: README.md  __init__.py  __main__.py  app.py  cli.py  installer.py  mcp_config.py  paths.py  postgres_tools.py  publisher.py  release_builder.py  runner.py  setup_wizard.py
docs/: MCP_SERVER.md  PRODUCT_RELEASE.md  PROJECT_MAP.md
docs/instructions/: BUILD_PIPELINE.md  PROJECT_OVERVIEW.md  README.md  REPOSITORY_PUBLISHING.md  USING_KNOWLEDGE_BASE.md  WINDOWS_RELEASE.md
llm_index/: README.md  manifest.json  modules.json
llm_index/edges/: apihelp.jsonl  dsgnchkapivb6.jsonl  emodeltoolkit.jsonl  epdmapi.jsonl  (+16 more)
scripts/: README.md  __init__.py  build_llm_index.py  collect_html.py  convert_sw_api_docs.py  load_postgres.py  unpack_chm_recursive.sh
swapi_mcp/: __main__.py  config.py  local_index.py  postgres_index.py  schema.sql
versions/: README.md
(+54035 files in other folders)
