[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solidworks-api-knowledge-mcp"
version = "0.1.0"
description = "MCP server and PostgreSQL loader for a local SOLIDWORKS API knowledge base."
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.1"]
release = ["pyinstaller>=6.0"]
dev = ["pytest>=8.0"]

[project.scripts]
swapi-mcp = "swapi_mcp.server:main"
swapi-release-manager = "swapi_release_manager.app:main"
swapi-release-manager-cli = "swapi_release_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["swapi_mcp", "swapi_release_manager"]

[tool.setuptools.package-data]
swapi_mcp = ["schema.sql"]
